--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<title>FARIS</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FARIS</title>
 </head>
+<style>
+    .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+</style>
+
 <body>
+    <h1 style="text-align: center;">Welcome To My Web Page</h1>
 
-<h1>This is a Heading</h1>
-<p style="color:rebeccapurple">HAYUKKKKKK.</p>
+    <img src="me.jpg" alt="Me" class="center" width="300" height="400">
 
-<h2>ZAID KACAKKK!!!</h2>
-<p style="color: black;"></p>.
+    <a href="#HOME">HOME</a><br><br>
+    <a href="#MENU">MENU</a><br><br>
+    <a href="#EXIT">EXIT</a>
 
 </body>
+
 </html>
